--- a/src/components/dashboard/style/main.css
+++ b/src/components/dashboard/style/main.css
@@ -2,10 +2,17 @@
   background-color: #E5E5E5;
 }
 
+.dashboard__submenu {
+  padding-top: 39px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  text-align: center;
+}
+
 .dashboard__title {
-  position: absolute;
-  left: 413px;
-  top: 120px;
+  margin-left: 7.8%;
+  margin-right: auto;
   font-family: Muller;
   font-style: normal;
   font-weight: bold;
@@ -16,25 +23,26 @@
 }
 
 .dashboard__list {
-  position: absolute;
-  top: 115px;
-  right: 288px;
   list-style: none;
+  margin-right: 7%;
 }
 
 .dashboard__list-item {
+  font-family: Muller;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  width: 81px;
+  height: 18px;
   margin-left: 48px;
   display: inline;
 }
 
 .dashboard__button {
-  position: absolute;
-  top: 101px;
-  right: 61px;
   width: 200px;
   height: 46px;
   color: #FFFFFF;
-  padding: 16px 14px;
   border: 1px solid #FD5A01;
   background: #FD5A01;
   border-radius: 12px;
@@ -43,9 +51,6 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 18px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .dashboard__list-item_active {
