--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -1,10 +1,25 @@
-.post {
+.post__item {
   position: absolute;
-  width: 310px;
   height: 224px;
-  left: 414px;
-  top: 166px;
   background: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
+}
+
+.card-img {
+  width: 20px;
+  height: 20px;
+  float: left;
+}
+
+.card {
+  height: 224px;
+  background-color: #FFFFFF;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
+  border-radius: 20px;
+  display: block !important;
+}
+
+.post__provider {
+  float: right;
 }
