--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -1,3 +1,4 @@
+$font-color-orange: #FD5A01;
 .post{
   //margin-top: 85px;
 }
@@ -10,6 +11,19 @@
   border-radius: 20px;
 
 }
+.post__content{
+  position: relative;
+  &:before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    height: 1px;
+    width: 273.25px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    //margin-bottom: 11px;
+  }
+}
 .card-img{
   width: 20px;
   height: 20px;
@@ -21,7 +35,111 @@
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
   display: block !important;
+  padding: 16px;
+}
+.post__top-list{
+  display: flex;
+  padding: 0 0 9px 0;
+  list-style: none;
+  margin: 0;
 }
 .post__provider{
-  float: right;
+ position: absolute;
+  right: -8px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  color: $font-color-orange;
+  width: 58px;
+}
+.post__avatar{
+  vertical-align: top;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 11px;
+}
+.post__user-name{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  color: black;
+  margin: 0;
+}
+
+.post__top-list-item{
+  padding: 0;
+  margin: 0;
+}
+.post__item-rating{
+  //background-color: #202A49;
+
+}
+.post__item-rating-star{
+  margin-top: 0;
+  padding-top: 0;
+  margin-right: 3px;
+  width: 7px;
+  //height: 8px;
+}
+.post__type{
+  margin-bottom: 10px;
+  width: 142px;
+  height: 18px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
+  color: $font-color-orange;
+}
+.post__address{
+  display: inline-block;
+  width: 40%;
+}
+.post__city{
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+  width: 124px;
+  height: 19px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 100%;
+  text-transform: capitalize;
+  color: #424141;
+ }
+.post__country{
+  display: flex;
+  align-items: center;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 100%;
+  width: 112px;
+  height: 14px;
+  color: rgba(64, 64, 64, 0.7);
+}
+.post__arrow{
+  margin-right: 40px;
+  //margin-left: 50px;
+}
+.post__deadline{
+  margin-left: auto;
+  width: 72px;
+  height: 12px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
+  color: rgba(0, 0, 0, 0.5);
+  margin-top: 5px;
 }
