--- a/src/components/footer/style/footer.scss
+++ b/src/components/footer/style/footer.scss
@@ -1,5 +1,13 @@
 .footer{
+  padding-left: 30%;
+  display: flex;
+  align-items: center;
   background-color: #202A49;
   grid-column-start: 1;
   grid-column-end: 3;
+}
+.footer__link{
+  display: inline;
+  margin-right: 20px;
+  color: #FFFFFF;
 }
