--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -1,5 +1,13 @@
+.col-4 {
+  padding: 0;
+}
+
+.post {
+  padding-left: 7.8%;
+  padding-right: 6.6%;
+}
+
 .post__item {
-  position: absolute;
   height: 224px;
   background: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
@@ -26,7 +34,9 @@
 }
 
 .card {
+  width: 280px;
   height: 224px;
+  margin-bottom: 10px;
   background-color: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
@@ -41,13 +51,13 @@
   margin: 0;
 }
 
-.post__provider {
+.post__package-provider {
   position: absolute;
   right: -8px;
+  font-size: 14px;
   font-family: Muller;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
   line-height: 14px;
   color: #FD5A01;
   width: 58px;
@@ -62,12 +72,12 @@
 }
 
 .post__user-name {
+  font-size: 18px;
   font-family: Muller;
   font-style: normal;
   font-weight: bold;
-  font-size: 18px;
   line-height: 18px;
-  color: black;
+  color: #000000;
   margin: 0;
 }
 
@@ -81,16 +91,17 @@
   padding-top: 0;
   margin-right: 3px;
   width: 7px;
+  color: chartreuse;
 }
 
-.post__type {
+.post__type-package-del {
   margin-bottom: 10px;
   width: 142px;
   height: 18px;
+  font-size: 18px;
   font-family: Muller;
   font-style: normal;
   font-weight: 500;
-  font-size: 18px;
   line-height: 18px;
   color: #FD5A01;
 }
@@ -106,26 +117,26 @@
   margin-bottom: 5px;
   width: 124px;
   height: 19px;
+  font-size: 14px;
   font-family: Muller;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
   line-height: 100%;
-  text-transform: capitalize;
   color: #424141;
+  text-transform: capitalize;
 }
 
 .post__country {
   display: flex;
   align-items: center;
+  font-size: 12px;
   font-family: Muller;
   font-style: normal;
   font-weight: 300;
-  font-size: 12px;
   line-height: 100%;
+  color: rgba(64, 64, 64, 0.7);
   width: 112px;
   height: 14px;
-  color: rgba(64, 64, 64, 0.7);
 }
 
 .post__arrow {
@@ -136,11 +147,58 @@
   margin-left: auto;
   width: 72px;
   height: 12px;
+  font-size: 12px;
   font-family: Muller;
   font-style: normal;
   font-weight: normal;
-  font-size: 12px;
   line-height: 12px;
   color: rgba(0, 0, 0, 0.5);
   margin-top: 5px;
+}
+
+.post__text {
+  margin-top: 11px;
+  margin-bottom: 1px;
+  width: 225px;
+  height: 16px;
+  overflow: hidden;
+  font-size: 16px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  color: #424141;
+  text-transform: capitalize;
+}
+
+.post__email {
+  margin-bottom: 0;
+  width: 140px;
+  height: 14px;
+  font-size: 14px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+}
+
+.post__interested-btn {
+  margin-top: 5px;
+  margin-left: auto;
+  width: 78px;
+  height: 16px;
+  font-size: 16px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 100%;
+  color: #202A49;
+  display: flex;
+  align-items: center;
+  background: transparent;
+  border: none;
 }
