--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -1,15 +1,24 @@
 $font-color-orange: #FD5A01;
+@mixin font($size, $family, $style, $weight, $line, $color){
+  font-size: $size;
+  font-family: $family;
+  font-style: $style;
+  font-weight: $weight;
+  line-height: $line;
+  color: $color;
+}
+.col-4{
+  padding: 0;
+}
 .post{
-  //margin-top: 85px;
+  padding-left: 7.8%;
+  padding-right: 6.6%;
 }
 .post__item{
-  position: absolute;
-  //width: 310px;
   height: 224px;
   background: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
-
 }
 .post__content{
   position: relative;
@@ -30,7 +39,9 @@ $font-color-orange: #FD5A01;
   float: left;
 }
 .card{
+  width: 280px;
   height: 224px;
+  margin-bottom: 10px;
   background-color: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
@@ -43,15 +54,10 @@ $font-color-orange: #FD5A01;
   list-style: none;
   margin: 0;
 }
-.post__provider{
+.post__package-provider{
  position: absolute;
   right: -8px;
-  font-family: Muller;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 14px;
-  color: $font-color-orange;
+  @include font(14px, Muller, normal, 500, 14px, $font-color-orange);
   width: 58px;
 }
 .post__avatar{
@@ -62,12 +68,7 @@ $font-color-orange: #FD5A01;
   margin-right: 11px;
 }
 .post__user-name{
-  font-family: Muller;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 18px;
-  color: black;
+  @include font(18px, Muller, normal, bold, 18px, #000000);
   margin: 0;
 }
 
@@ -75,27 +76,19 @@ $font-color-orange: #FD5A01;
   padding: 0;
   margin: 0;
 }
-.post__item-rating{
-  //background-color: #202A49;
-
-}
 .post__item-rating-star{
   margin-top: 0;
   padding-top: 0;
   margin-right: 3px;
   width: 7px;
+  color: chartreuse;
   //height: 8px;
 }
-.post__type{
+.post__type-package-del{
   margin-bottom: 10px;
   width: 142px;
   height: 18px;
-  font-family: Muller;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 18px;
-  color: $font-color-orange;
+  @include font(18px, Muller, normal, 500, 18px, $font-color-orange);
 }
 .post__address{
   display: inline-block;
@@ -107,25 +100,15 @@ $font-color-orange: #FD5A01;
   margin-bottom: 5px;
   width: 124px;
   height: 19px;
-  font-family: Muller;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 100%;
+  @include font(14px, Muller, normal, normal, 100%, #424141);
   text-transform: capitalize;
-  color: #424141;
  }
 .post__country{
   display: flex;
   align-items: center;
-  font-family: Muller;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 100%;
+  @include font(12px, Muller, normal, 300, 100%, rgba(64, 64, 64, 0.7));
   width: 112px;
   height: 14px;
-  color: rgba(64, 64, 64, 0.7);
 }
 .post__arrow{
   margin-right: 40px;
@@ -135,11 +118,35 @@ $font-color-orange: #FD5A01;
   margin-left: auto;
   width: 72px;
   height: 12px;
-  font-family: Muller;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 12px;
-  color: rgba(0, 0, 0, 0.5);
+  @include font(12px, Muller, normal, normal, 12px, rgba(0, 0, 0, 0.5));
   margin-top: 5px;
+}
+.post__text{
+  margin-top: 11px;
+  margin-bottom: 1px;
+  width: 225px;
+  height: 16px;
+  overflow: hidden;
+  @include font(16px, Muller, normal, 500, 16px, #424141);
+  text-transform: capitalize;
+}
+.post__email{
+  margin-bottom: 0;
+  width: 140px;
+  height: 14px;
+  @include font(14px, Muller, normal, normal, 100%, rgba(0, 0, 0, 0.5));
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+}
+.post__interested-btn{
+  margin-top: 5px;
+  margin-left: auto;
+  width: 78px;
+  height: 16px;
+  @include font(16px, Muller, normal, bold, 100%, #202A49);
+  display: flex;
+  align-items: center;
+  background: transparent;
+  border: none;
 }
