--- a/src/components/dashboard/style/main.scss
+++ b/src/components/dashboard/style/main.scss
@@ -39,7 +39,6 @@
   width: 200px;
   height: 46px;
   color: #FFFFFF;
-
   border: 1px solid #FD5A01;
   background: #FD5A01;
   border-radius: 12px;
@@ -48,6 +47,9 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 18px;
+  &:focus{
+    outline: none;
+  }
 }
 .dashboard__list-item_active{
   position: relative;
