--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -23,7 +23,7 @@
   left: 0;
   bottom: -6px;
   height: 1px;
-  width: 273.25px;
+  width: 245px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
@@ -201,4 +201,25 @@
   align-items: center;
   background: transparent;
   border: none;
+}
+.post__interested-btn:hover {
+  background: transparent;
+  border: none;
+  color: #FD5A01;
+  outline: none;
+}
+.post__interested-btn:focus {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+.post__interested-btn:visited {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+.post__interested-btn:active {
+  background: transparent;
+  border: none;
+  outline: none;
 }
