--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -42,6 +42,10 @@
   border-radius: 20px;
   display: block !important;
   padding: 16px;
+  cursor: pointer;
+}
+.card:hover {
+  opacity: 0.9;
 }
 
 .post__top-list {
