--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -47,6 +47,10 @@ $font-color-orange: #FD5A01;
   border-radius: 20px;
   display: block !important;
   padding: 16px;
+  cursor: pointer;
+  &:hover{
+    opacity: 0.9;
+  }
 }
 .post__top-list{
   display: flex;
