full view of post

--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -23,7 +23,7 @@
   left: 0;
   bottom: -6px;
   height: 1px;
-  width: 245px;
+  width: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
