--- a/src/components/post/full-view/style/full-post.css
+++ b/src/components/post/full-view/style/full-post.css
@@ -2,10 +2,76 @@
   position: absolute;
   left: 40%;
   top: 22%;
-  width: 500px;
+  width: 34.72%;
   height: 673px;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 1;
-  padding: 30px;
+  padding: 27px 32px;
+}
+
+.full-post__text {
+  margin-top: 14px;
+  margin-bottom: 1px;
+  width: 410px;
+  height: 162px;
+  overflow: auto;
+  font-size: 16px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 170%;
+  color: #424141;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+}
+
+.full-post__images {
+  display: flex;
+  justify-content: space-around;
+}
+
+.full-post__image {
+  display: flex;
+  justify-content: center;
+  width: 40.4%;
+  height: 149px;
+  background: #F8F8F8;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 6px;
+}
+
+.full-post__icon {
+  width: 30px;
+}
+
+.full-post__email {
+  margin-top: 11px;
+  margin-bottom: 32px;
+  width: 140px;
+  height: 14px;
+  font-size: 14px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+}
+
+.full-post__interested-btn {
+  margin-top: 19px;
+}
+
+.full-post__exit {
+  margin-left: 96%;
+  margin-bottom: 25px;
+}
+
+.full-post__exit-img {
+  width: 50px;
 }
