--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -28,7 +28,7 @@ $font-color-orange: #FD5A01;
     left: 0;
     bottom: -6px;
     height: 1px;
-    width: 245px;
+    width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     //margin-bottom: 11px;
   }
