--- a/src/components/sidebar/style/sidebar.scss
+++ b/src/components/sidebar/style/sidebar.scss
@@ -1,34 +1,48 @@
 $font-family: Muller;
 .sidebar {
+  display: grid;
   position: relative;
+  padding-left: 32px;
+  padding-top: 30px;
   background-color: #202A49;
   grid-row-start: 1;
   grid-row-end: 3;
+  grid-gap: 0;
+  grid-template-rows: repeat(4, 58px);
+  grid-template-columns: repeat(2, 50%);
+  grid-template-areas:
+    "l l"
+    "p g"
+    "p g"
+    "r r";
   &:before{
     content: "";
     position: absolute;
-    left: 60px;
-    bottom: 722px;
+    left: 10%;
+    top: 280px;
     height: 1px;
-    width: 87%;
+    width: 83%;
     border-bottom: 1px solid rgba(196, 196, 196, 0.23);
   }
 }
 .sidebar__item-logo {
-  position: absolute;
-  left: 32px;
-  top: 30px;
+  grid-area: l;
+  //margin-left: 32px;
+  //margin-top: 30px;
 }
 
 .sidebar__item-photo {
-  position: absolute;
-  left: 37px;
-  top: 109px;
+  grid-area: p;
+  align-self: center;
+  //margin-left: 37px;
+  //margin-top: 109px;
 }
 .sidebar__item-greeting{
-  position: absolute;
-  left: 200px;
-  top: 130px;
+  grid-area: g;
+  align-self: center;
+  //position: absolute;
+  //left: 200px;
+  //top: 130px;
   //overflow: auto;
   font-family: $font-family;
   font-style: normal;
@@ -38,10 +52,15 @@ $font-family: Muller;
   color: #FFFFFF;
 }
 .sidebar__item-rating{
-  position: absolute;
-  left: 32px;
-  top: 260.55px;
+  grid-area: r;
+  align-self: end;
+  //position: absolute;
+  //left: 32px;
+  //top: 260.55px;
 }
 .sidebar__item-rating-star{
   margin-right: 12px;
+}
+.sidebar__weather{
+  grid-area: w;
 }
