--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -9,7 +9,8 @@
   z-index: 1;
   padding: 32px;
   display: grid;
-  grid-gap: 30px;
+  grid-row-gap: 10px;
+  grid-column-gap: 15px;
   grid-template-rows: repeat(11, 50px);
   grid-template-columns: repeat(2, 45%);
   grid-template-areas:
@@ -17,7 +18,6 @@
     "lf lt"
     "lf lt"
     "lf lt"
-    "dt dt"
     "dt dt"
     "ttl ds"
     "ttl ds"
@@ -45,7 +45,7 @@
 }
 .create-post__date{
   grid-area: dt;
-  background-color: chartreuse;
+  display: inline-block;
 }
 .create-post__title{
   grid-area: ttl;
