--- a/src/components/create-post/style/create-post.scss
+++ b/src/components/create-post/style/create-post.scss
@@ -3,31 +3,32 @@
   left: 22%;
   top: 7%;
   width: 55.34%;
-  height: 142%;
+  height: 680px;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 1;
   padding: 32px;
   display: grid;
-  grid-row-gap: 10px;
-  grid-column-gap: 15px;
-  grid-template-rows: repeat(11, 50px);
+  //grid-row-gap: 15px;
+  grid-column-gap: 50px;
+  grid-template-rows: 8% 30% 13% 16% 19% 12%;
   grid-template-columns: repeat(2, 45%);
   grid-template-areas:
     "t t"
     "lf lt"
-    "lf lt"
-    "lf lt"
     "dt dt"
     "ttl ds"
-    "ttl ds"
-    "p p"
     "p p"
     "b b";
 }
+.create-post .form-control{
+  background: #F8F8F8;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 5px;
+}
 .create-post__type{
   grid-area: t;
-  //background-color: #202A49;
   font-family: Muller;
   font-style: normal;
   font-weight: 500;
@@ -37,11 +38,9 @@
 }
 .create-post__location-from{
   grid-area: lf;
-  //margin-right: 20px;
 }
 .create-post__location-to{
   grid-area: lt;
-  //background-color: aqua;
 }
 .create-post__date{
   grid-area: dt;
@@ -49,19 +48,69 @@
 }
 .create-post__title{
   grid-area: ttl;
-  background-color: black;
 }
 .create-post__description{
   grid-area: ds;
-  background-color: aquamarine;
 }
 .create-post__photos{
   grid-area: p;
-  background-color: lightsteelblue;
+  width: 470px;
+}
+.create-post__photo{
+  width: 116px;
+  height: 80px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ // justify-content: center;
+  background: #F8F8F8;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 6px;
+}
+.create-post__add-photo{
+  width: 9px;
+  height: 9px;
+  outline: none;
+  border: none;
+  padding: 0;
+  background-image: url('../images/plus.svg');
+  &:focus{
+    outline: none;
+    background: none;
+    border: none;
+    padding: 0;
+  }
+}
+.create-post__icon{
+  width: 22px;
 }
 .create-post__buttons{
   grid-area: b;
-  background-color: brown;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.create-post__buttons button{
+  width: 200px;
+  height: 46px;
+  color: #FFFFFF;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  &:focus{
+    border: none;
+    outline: none;
+  }
+}
+.create-post__cancel-button{
+  background: #202A49;
+  margin-right: 15px;
+}
+.create-post__save-button{
+  background: #FD5A01;
 }
 .create-post__form-title{
   font-family: Muller;
@@ -70,4 +119,19 @@
   font-size: 20px;
   line-height: 20px;
   color: #424141;
+  padding-bottom: 3px;
 }
+//"t t"
+//    "lf lt"
+//    "lf lt"
+//    "lf lt"
+//    "lf lt"
+//    "dt dt"
+//    "dt dt"
+//    "ttl ds"
+//    "ttl ds"
+//    //"ttl ds"
+//    "p p"
+//    "p p"
+//    "b b"
+//    "b b";
