--- a/src/components/footer/style/footer.css
+++ b/src/components/footer/style/footer.css
@@ -11,4 +11,11 @@
   display: inline;
   margin-right: 20px;
   color: #FFFFFF;
+  border: none;
+  outline: none;
+  background: none;
+}
+.footer__link:focus {
+  border: none;
+  outline: none;
 }
