--- a/src/components/footer/style/footer.scss
+++ b/src/components/footer/style/footer.scss
@@ -10,4 +10,11 @@
   display: inline;
   margin-right: 20px;
   color: #FFFFFF;
+  border: none;
+  outline: none;
+  background: none;
+  &:focus{
+    border: none;
+    outline: none;
+  }
 }
