review post for profile

--- a/src/components/dashboard/style/main.scss
+++ b/src/components/dashboard/style/main.scss
@@ -3,7 +3,7 @@
 
 }
 .dashboard__submenu{
-  padding-top: 39px;
+  padding-top: 4%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
