--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -85,8 +85,7 @@ $font-color-orange: #FD5A01;
   padding-top: 0;
   margin-right: 3px;
   width: 7px;
-  color: chartreuse;
-  //height: 8px;
+  //filter: invert(1);
 }
 .post__type-package-del{
   margin-bottom: 10px;
