--- a/src/components/reviews/style/reviews.scss
+++ b/src/components/reviews/style/reviews.scss
@@ -9,8 +9,13 @@
   width: 16.8%;
   height: 101px;
   margin-right: 20px;
-  background: #FD5A01;
   border-radius: 10px;
+}
+.review-orange{
+  background-color: #FD5A01;
+}
+.review-blue{
+  background-color: #202A49;
 }
 .review__rating-star{
   margin-top: 0;
