post component customizing

--- a/src/components/post/style/post.css
+++ b/src/components/post/style/post.css
@@ -34,9 +34,9 @@
 }
 
 .card {
-  width: 280px;
+  width: 93%;
   height: 224px;
-  margin-bottom: 10px;
+  margin-bottom: 4%;
   background-color: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
