--- a/src/components/app/style/app.scss
+++ b/src/components/app/style/app.scss
@@ -5,7 +5,7 @@ $line-height: 20px;
   width: 100%;
   display: grid;
   grid-template-columns: 25% 75%;
-  grid-template-rows: 80px 893px 51px;
+  grid-template-rows: 80px 90% 51px;
   background-color: #E5E5E5;
   font-family: $font-family;
 }
