--- a/src/components/header/style/header.scss
+++ b/src/components/header/style/header.scss
@@ -21,6 +21,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
+  margin-right: 25px;
 }
 .mr-auto{
   margin-left: 59.75px;
@@ -28,7 +29,8 @@
 .nav__item_active{
   background-color: #202A49;
   color: #FFFFFF;
-  border-spacing: 16px 14px;
+  //border-spacing: 16px 14px;
+  padding: 16px 14px;
   border: 1px solid #202A49;
   border-radius: 12px;
   font-family: Muller;
@@ -42,6 +44,7 @@
   right: 77px;
   font-size: 16px;
   line-height: 16px;
+  margin: 0;
 }
 .nav__item-logout-icon{
   margin-right: 8px;
