--- a/src/components/post/style/post.scss
+++ b/src/components/post/style/post.scss
@@ -40,7 +40,7 @@ $font-color-orange: #FD5A01;
 }
 .card{
   width: 93%;
-  height: 224px;
+  //height: 224px;
   margin-bottom: 4%;
   background-color: #FFFFFF;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.04);
@@ -93,13 +93,14 @@ $font-color-orange: #FD5A01;
   width: 7px;
   //filter: invert(1);
 }
-.post__type-package-del{
-  margin-bottom: 10px;
+.post__type{
+  margin: 0;
   width: 142px;
   height: 18px;
   @include font(18px, Muller, normal, 500, 18px, $font-color-orange);
 }
 .post__address{
+  margin-top: 10px;
   display: inline-block;
   width: 40%;
 }
