terms&conditions popup window

--- a/src/components/popup-support/style/support.css
+++ b/src/components/popup-support/style/support.css
@@ -1,9 +1,8 @@
 .support {
   position: absolute;
-  left: 15%;
-  top: 594px;
+  left: 27%;
+  top: 96%;
   width: 28%;
-  height: 380px;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 1;
