--- a/src/components/popup-support/style/support.scss
+++ b/src/components/popup-support/style/support.scss
@@ -1,23 +1,14 @@
 .support{
   position: absolute;
-  left: 15%;
-  top: 594px;
+  left: 27%;
+  top: 96%;
   width: 28%;
-  height: 380px;
+  //height: 380px;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 1;
   padding: 32px;
-  //grid-column-gap: 50px;
-  //grid-template-rows: 8% 30% 13% 16% 19% 12%;
-  //grid-template-columns: repeat(2, 45%);
-  //grid-template-areas:
-  //  "t t"
-  //  "lf lt"
-  //  "dt dt"
-  //  "ttl ds"
-  //  "p p"
-  //  "b b";
+
 }
 .form-control{
   background: #F8F8F8;
