--- a/src/components/reviews/full-review/style/full-review.scss
+++ b/src/components/reviews/full-review/style/full-review.scss
@@ -2,12 +2,23 @@
   position: absolute;
   left: 40%;
   top: 22%;
-  width: 34.72%;
-  height: 673px;
+  width: 30.6%;
+  //height: 673px;
   background: #FFFFFF;
   border-radius: 20px;
   z-index: 99;
   padding: 27px 32px;
+}
+.full-review__text{
+  width: 95%;
+  height: 60%;
+  overflow: auto;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 170%;
+  color: #000000;
 }
 .full-review__rating{
   margin-bottom: 17px;
@@ -17,4 +28,17 @@
   padding-top: 0;
   margin-right: 12px;
   width: 20px;
+}
+.full-review__exit{
+  float: right;
+}
+.full-review__image{
+  display: flex;
+  justify-content: center;
+  width: 96%;
+  height: 149px;
+  background: #F8F8F8;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 6px;
 }
