--- a/src/components/dashboard/style/main.css
+++ b/src/components/dashboard/style/main.css
@@ -37,11 +37,34 @@
   height: 18px;
   margin-left: 48px;
   display: inline;
-  color: #000000;
+}
+
+.dashboard__filter {
+  width: 150px;
+  height: 46px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: #202A49;
+  border: 1px solid #FFFFFF;
+  background: #FFFFFF;
+  border-radius: 12px;
+}
+.dashboard__filter:focus {
+  outline: none;
+}
+.dashboard__filter:active {
+  outline: none;
+}
+
+.dashboard__list-item img {
+  padding-right: 10px;
 }
 
 .dashboard__button {
-  width: 200px;
+  width: 180px;
   height: 46px;
   color: #FFFFFF;
   border: 1px solid #FD5A01;
