--- a/src/components/pop-up/popup-switch/style/popup.scss
+++ b/src/components/pop-up/popup-switch/style/popup.scss
@@ -1,7 +1,7 @@
-.switch {
+.switch{
   position: absolute;
   width: 480px;
-  height: 261px;
+  //height: 261px;
   left: 60%;
   top: 170px;
   background: #FFFFFF;
@@ -10,14 +10,12 @@
   z-index: 1;
   padding: 30px;
 }
-
-.switch ul {
+.switch ul{
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
-.switch li {
+.switch li{
   position: relative;
   font-family: Muller;
   font-style: normal;
@@ -27,15 +25,13 @@
   color: #000000;
   margin-bottom: 20px;
 }
-
-input[type=radio] {
+input[type="radio"]{
   margin-right: 11px;
-}
-input[type=radio]:checked + label {
-  color: #FD5A01;
-}
-
-.switch__title {
+  &:checked + label{
+    color: #FD5A01;
+  }
+ }
+.switch__title{
   width: 99px;
   height: 22px;
   font-family: Muller;
@@ -49,16 +45,14 @@ input[type=radio]:checked + label {
   color: #202A49;
   margin-bottom: 20px;
 }
-
-.switch__buttons {
+.switch__buttons{
   float: right;
 }
-
-.switch__buttons li {
+.switch__buttons li{
   display: inline;
-}
 
-.switch__button {
+}
+.switch__button{
   background: transparent;
   border: none;
   outline: none;
@@ -70,11 +64,11 @@ input[type=radio]:checked + label {
   text-transform: uppercase;
   color: #202A49;
   margin-left: 41px;
-}
-.switch__button:focus {
-  outline: none;
-  border: none;
-}
-.switch__button:hover {
-  color: #FD5A01;
+  &:focus{
+    outline: none;
+    border: none;
+  }
+  &:hover{
+    color: #FD5A01;
+  }
 }
