--- a/src/components/dashboard/style/main.css
+++ b/src/components/dashboard/style/main.css
@@ -19,7 +19,6 @@
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
-  color: #000000;
 }
 
 .dashboard__list {
@@ -37,6 +36,15 @@
   height: 18px;
   margin-left: 48px;
   display: inline;
+  color: #000000;
+}
+
+.dashboard__label {
+  color: black;
+}
+.dashboard__label:hover {
+  color: #FD5A01;
+  text-decoration: none;
 }
 
 .dashboard__filter {
