--- a/src/components/profile/style/profile.css
+++ b/src/components/profile/style/profile.css
@@ -10,3 +10,17 @@
   color: #000000;
   padding-top: 2%;
 }
+
+.profile__list-item_active {
+  position: relative;
+  color: #FD5A01;
+}
+.profile__list-item_active:before {
+  content: "";
+  position: absolute;
+  left: -20%;
+  bottom: -6px;
+  height: 2px;
+  width: 140%;
+  border-bottom: 1px solid #FD5A01;
+}
