--- a/src/components/profile/style/profile.scss
+++ b/src/components/profile/style/profile.scss
@@ -1,3 +1,10 @@
+.profile{
+  background-color: #E5E5E5;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 25% 75%;
+  grid-template-rows: 80px calc(100% - 80px - 51px) 51px;
+}
 .profile__title{
   margin-left: 7.8%;
   margin-right: auto;
