--- a/src/components/inbox/inbox-page/style/inbox-page.css
+++ b/src/components/inbox/inbox-page/style/inbox-page.css
@@ -2,6 +2,15 @@
   width: 100%;
   display: grid;
   grid-template-columns: 46.8% 53.2%;
-  grid-template-rows: 80px auto 50px;
+  min-height: 1024px;
+  grid-template-rows: 80px minmax(974px, auto) 50px;
   background: #E5E5E5;
+}
+
+.inbox-page__sidebar {
+  background: #FFFFFF;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  padding-top: 5%;
+  padding-left: 8%;
 }
