--- a/src/components/header/style/header.css
+++ b/src/components/header/style/header.css
@@ -1,6 +1,7 @@
 .header {
   background-color: #E5E5E5 !important;
   position: relative;
+  padding-right: 5.5%;
 }
 .header:before {
   content: "";
@@ -10,6 +11,12 @@
   height: 1px;
   width: 85.3%;
   border-bottom: 1px solid rgba(196, 196, 196, 0.23);
+}
+
+.inbox-header {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 5.5%;
 }
 
 .nav {
@@ -23,7 +30,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
-  margin-right: 25px;
+  margin-right: 40px;
 }
 
 .mr-auto {
@@ -44,11 +51,10 @@
 }
 
 .nav__item_logout {
-  position: absolute;
-  right: 77px;
   font-size: 16px;
   line-height: 16px;
-  margin: 0;
+  margin-right: 0;
+  margin-left: 30px;
 }
 
 .nav__item-logout-icon {
