--- a/src/components/inbox/inbox-page/style/inbox-page.scss
+++ b/src/components/inbox/inbox-page/style/inbox-page.scss
@@ -23,18 +23,29 @@
   grid-row-end: 3;
   padding-top: 4%;
   padding-left: 8%;
-  grid-gap: 0;
-  grid-template-rows: repeat(14, 58px);
+  grid-gap: 3%;
+  grid-template-rows: repeat(13, 46px);
   grid-template-columns: 85%;
   grid-template-areas:
     "l"
     "t"
     "h" "h" "h" "h"
-    "bd" "bd" "bd" "bd" "bd" "bd" "bd"
+    "bd" "bd" "bd" "bd" "bd" "bd"
     "btn";
 }
 .inbox-page__title{
   grid-area: t;
+  //width: 171px;
+  //height: 28px;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 28px;
+  text-transform: uppercase;
+  display: flex;
+  align-self: center;
+  color: #000000;
 }
 .inbox-page__logo{
   grid-area: l;
@@ -45,10 +56,10 @@
   &:before{
     content: "";
     position: absolute;
-    left: 75.75px;
-    bottom: 10%;
+    left: 0;
+    bottom: 5%;
     height: 1px;
-    width: 85.3%;
+    width: 100%;
     border-bottom: 1px solid rgba(196, 196, 196, 0.23);
   }
 }
@@ -71,4 +82,45 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   border-radius: 6px;
+}
+.inbox-page__post-type{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 150%;
+  color: #FD5A01;
+}
+.inbox-page__category{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 150%;
+  color: #202A49;
+}
+.inbox-page__data{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 100%;
+  color: #202A49;
+}
+.inbox-page__text{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 170%;
+  color: #202A49;
+}
+.inbox-page__email{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 100%;
+  text-transform: capitalize;
+  color: rgba(0, 0, 0, 0.5);
 }
