interested user's post inbox page

--- a/src/components/inbox/inbox-page/style/inbox-page.css
+++ b/src/components/inbox/inbox-page/style/inbox-page.css
@@ -142,3 +142,8 @@
   text-transform: capitalize;
   color: rgba(0, 0, 0, 0.5);
 }
+
+.inbox-page__content {
+  padding-top: 3%;
+  padding-left: 9%;
+}
