--- a/src/components/inbox/inbox-page/interested-user/style/interested.css
+++ b/src/components/inbox/inbox-page/interested-user/style/interested.css
@@ -15,6 +15,10 @@
   display: flex;
 }
 
+.interested-user__info:hover {
+  opacity: 0.8;
+}
+
 .interested__list-item {
   display: inline-block;
 }
