--- a/src/components/inbox/inbox-page/interested-user/style/interested.scss
+++ b/src/components/inbox/inbox-page/interested-user/style/interested.scss
@@ -13,6 +13,11 @@
     display: flex;
   }
 }
+.interested-user__info{
+  &:hover{
+    opacity: 0.8;
+  }
+}
 .interested__list-item{
   display: inline-block;
 }
