secondary info for user, page finish

--- a/src/components/profile/style/profile.css
+++ b/src/components/profile/style/profile.css
@@ -8,7 +8,7 @@
 
 .profile__title {
   margin-left: 7.8%;
-  margin-right: auto;
+  margin-bottom: 0;
   font-family: Muller;
   font-style: normal;
   font-weight: bold;
