--- a/src/components/reviews/style/reviews.css
+++ b/src/components/reviews/style/reviews.css
@@ -1,14 +1,16 @@
 .reviews {
+  margin-top: 3%;
   display: flex;
-  flex-flow: row nowrap;
-  margin-left: 7.8%;
+  flex-flow: row wrap;
+  padding-left: 7%;
 }
 
 .review {
   padding: 5px 9px;
-  width: 16.8%;
+  width: 154px;
   height: 101px;
-  margin-right: 20px;
+  margin-right: 3%;
+  margin-bottom: 2%;
   border-radius: 10px;
 }
 
