--- a/src/components/profile/style/profile.scss
+++ b/src/components/profile/style/profile.scss
@@ -7,7 +7,8 @@
 }
 .profile__title{
   margin-left: 7.8%;
-  margin-right: auto;
+  margin-bottom: 0;
+  //margin-right: auto;
   font-family: Muller;
   font-style: normal;
   font-weight: bold;
