--- a/src/components/reviews/style/reviews.scss
+++ b/src/components/reviews/style/reviews.scss
@@ -1,14 +1,17 @@
 .reviews{
+  margin-top: 3%;
   display: flex;
   //flex: 1 1 15%;
-  flex-flow: row nowrap;
-  margin-left: 7.8%;
-}
+  flex-flow: row wrap;
+  padding-left: 7%;
+  //padding-right: 2%;
+  }
 .review{
   padding: 5px 9px;
-  width: 16.8%;
+  width: 154px;
   height: 101px;
-  margin-right: 20px;
+  margin-right: 3%;
+  margin-bottom: 2%;
   border-radius: 10px;
 }
 .review-orange{
@@ -33,7 +36,6 @@
   display: flex;
   align-items: center;
   color: #FFFFFF;
-
 }
 .review__time{
   font-family: Muller;
