--- a/src/components/user-profile/user-info-card/style/user-info-card.css
+++ b/src/components/user-profile/user-info-card/style/user-info-card.css
@@ -99,5 +99,28 @@
 
 .user-profile__second-info {
   display: grid;
-  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: 55% 45%;
+}
+
+.inbox-page__title_noup {
+  text-transform: none;
+}
+
+.user-profile__text-about {
+  background: #FFFFFF;
+  border-radius: 25px;
+  width: 90%;
+  height: 80%;
+  margin-top: 3%;
+  padding: 32px;
+}
+
+.user-profile__about-lbl {
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 170%;
+  color: #000000;
+  width: 90%;
 }
