--- a/src/components/landing-page/landing-header/style/header-landing.scss
+++ b/src/components/landing-page/landing-header/style/header-landing.scss
@@ -1,3 +1,39 @@
-.header{
+.header-landing{
   background: url("../../images/image-for-landing.png")  no-repeat;
+  padding-left: 5%;
+  padding-right: 5%;
+  &:before{
+    content: "";
+    position: absolute;
+    left: 75.75px;
+    bottom: 0;
+    height: 1px;
+    width: 85.3%;
+    border-bottom: 0 solid rgba(196, 196, 196, 0.23);
+  }
+}
+.landing__nav-item{
+  font-family: Muller;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
+  color: #FFFFFF;
+  //margin-left: auto;
+}
+.landing__navbar{
+  margin-right: 0 !important;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+.nav__login{
+  background: transparent;
+  outline: none;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  padding: 12px 20px;
+  &:focus{
+    outline: none
+  }
 }
