--- a/src/components/landing-page/style/landing-page.css
+++ b/src/components/landing-page/style/landing-page.css
@@ -1,4 +1,5 @@
 .landing__main {
+  width: 100%;
   background: url("../images/image-for-landing.png") no-repeat;
   min-height: 900px;
 }
@@ -39,15 +40,14 @@
 .landing__about-project {
   min-height: 2365px;
   padding-top: 7%;
-  padding-left: 5%;
   display: grid;
   grid-template-rows: 25% 43.75% 31.25%;
 }
 
 .landing__about {
+  padding-left: 5%;
   display: flex;
   list-style: none;
-  padding: 0;
 }
 
 .landing__about-title {
@@ -77,6 +77,10 @@
 
 .landing__about-img {
   grid-area: aimg;
+}
+
+.landing__how-works {
+  padding-left: 5%;
 }
 
 .landing__how-works-list {
@@ -130,4 +134,65 @@
   align-items: center;
   letter-spacing: 0.02em;
   color: #000000;
+}
+
+.landing__donation-title {
+  padding-left: 5%;
+  padding-bottom: 3%;
+}
+
+.landing__donation-background {
+  display: flex;
+  align-items: center;
+  background: url("../images/donation-back.png") no-repeat;
+  min-height: 390px;
+  position: relative;
+}
+.landing__donation-background:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(32, 42, 73, 0.72);
+}
+
+.landing__donation-text {
+  z-index: 1;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 170%;
+  color: #FFFFFF;
+  width: 36%;
+  padding-left: 5%;
+}
+
+.landing__footer {
+  padding: 0 5% 0 5%;
+  background-color: #202A49;
+  min-height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.landing__footer-link {
+  background: transparent;
+  outline: none;
+  border: none;
+  font-family: Muller;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 27px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.landing__footer-link:focus {
+  outline: none;
 }
