login form, elemnts' z-index

--- a/src/components/landing-page/landing-header/style/header-landing.css
+++ b/src/components/landing-page/landing-header/style/header-landing.css
@@ -3,17 +3,10 @@
   padding-left: 5%;
   padding-right: 5%;
 }
-.header-landing:before {
-  content: "";
-  position: absolute;
-  left: 75.75px;
-  bottom: 0;
-  height: 1px;
-  width: 85.3%;
-  border-bottom: 0 solid rgba(196, 196, 196, 0.23);
-}
 
 .landing__nav-item {
+  position: relative;
+  z-index: 1;
   font-family: Muller;
   font-style: normal;
   font-weight: 500;
@@ -30,6 +23,7 @@
 }
 
 .nav__login {
+  z-index: 1;
   background: transparent;
   outline: none;
   border: 1px solid #FFFFFF;
