--- a/src/components/landing-page/registrationForm/style/register.css
+++ b/src/components/landing-page/registrationForm/style/register.css
@@ -2,10 +2,22 @@
   width: 100%;
   background: url("../../images/image-for-landing.png") no-repeat;
   min-height: 900px;
+  position: relative;
+}
+.register-container:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(32, 42, 73, 0.3);
 }
 
 .register-form {
   position: absolute;
+  z-index: 5;
   left: 18%;
   top: 10%;
   padding: 4% 6%;
@@ -69,6 +81,8 @@
 }
 
 .register__checkbox-lbl {
+  display: flex;
+  align-items: center;
   font-family: Muller;
   font-style: normal;
   font-weight: normal;
@@ -96,4 +110,8 @@
   color: #FFFFFF;
   background: #202A49;
   border-radius: 12px;
+  outline: none;
+}
+.register__sign-up-btn:focus {
+  outline: none;
 }
