--- a/src/components/landing-page/style/landing-page.css
+++ b/src/components/landing-page/style/landing-page.css
@@ -2,9 +2,22 @@
   width: 100%;
   background: url("../images/image-for-landing.png") no-repeat;
   min-height: 900px;
+  position: relative;
+}
+.landing__main:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(32, 42, 73, 0.3);
 }
 
 .landing__slogan {
+  position: relative;
+  z-index: 100;
   font-family: Avenir Next LT Pro;
   font-style: normal;
   font-weight: 800;
@@ -18,6 +31,8 @@
 }
 
 .landing__join-btn {
+  position: relative;
+  z-index: 1;
   width: 300px;
   height: 50px;
   background-color: #FFFFFF;
